# voxel

./: .gitignore  Cargo.toml  Makefile
benches/: text_rendering.rs
map/: Cargo.toml
map/benches/: octree.rs
map/src/: io.rs  lib.rs  region.rs  region_file_schema.sql
map/src/octree/: location_code.rs  mod.rs
mod/: Cargo.toml
mod/src/: block_defs.rs  lib.rs  module.rs
src/: camera.rs  init.rs  lib.rs  magica.rs  main.rs  model_util.rs  png.rs  resources.rs  sw_image.rs  timing.rs
src/magica/: io.rs  mod.rs
src/matrix/: mod.rs  projection.rs  screen.rs  transformations.rs
src/text_rendering/: cache.rs  freetype.rs  glyph_rendering.rs  harfbuzz.rs  mod.rs
src/vox/: byte_order_test.vox  logo.vox
