[workspace]
members = [
	"assembly-script",
	"map",
	"map_gen",
	"mod",
]

[package]
name = "voxel"
version = "0.1.0"
authors = ["Roy Wellington Ⅳ <cactus_hugged@yahoo.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.55"
ash = "0.35.0"
env_logger = "0.7.1"
freetype = "0.7.0"
log = "0.4.8"
png = "0.17.2"
sdl2 = "0.34.0"
smallvec = "1.8.0"
structopt = "0.3.26"
thiserror = "1.0.30"
vulkano = "0.28.0"
vulkano-shaders = "0.28.0"
uuid = "0.8.2"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "text_rendering"
harness = false
